# g1_control

./: LICENSE  README.md
g1_controllers/: CMakeLists.txt  g1_controllers_plugins.xml  package.xml
g1_controllers/config/: controllers.yaml
g1_controllers/include/g1_controllers/: SafetyChecker.h  TargetTrajectoriesPublisher.h  g1Controller.h
g1_controllers/include/g1_controllers/visualization/: g1SelfCollisionVisualization.h
g1_controllers/launch/: load_cheat_controller.launch.py  load_joy_controller.launch.py  load_normal_controller.launch.py
g1_controllers/src/: CheatControllerNode.cpp  JoyControllerNode.cpp  NormalControllerNode.cpp  TargetTrajectoriesPublisher.cpp  g1Controller.cpp
g1_dummy/: CMakeLists.txt  package.xml
g1_dummy/include/g1_dummy/gait/: GaitKeyboardPublisher.h  GaitReceiver.h  ModeSequenceTemplateRos.h
g1_dummy/include/g1_dummy/visualization/: g1Visualizer.h
g1_dummy/launch/: legged_robot_sqp.launch.py  multiplot.launch.py
g1_dummy/rviz/: g1.rviz
g1_dummy/src/: g1DdpMpcNode.cpp  g1DummyNode.cpp  g1GaitCommandNode.cpp  g1IpmMpcNode.cpp  g1PoseCommandNode.cpp  g1SqpMpcNode.cpp
g1_dummy/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
g1_dummy/src/visualization/: g1Visualizer.cpp
g1_estimation/: CMakeLists.txt  package.xml
g1_estimation/include/g1_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
g1_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
g1_interface/: CMakeLists.txt  package.xml
g1_interface/config/command/: gait.info  reference.info  reference_.info
g1_interface/config/mpc/: task.info
g1_interface/include/g1_interface/: g1Interface.h  g1PreComputation.h  package_path.h.in
g1_interface/include/g1_interface/common/: ModelSettings.h  Types.h  utils.h
g1_interface/include/g1_interface/constraint/: EndEffectorLinearConstraint.h  FootRollConstraint.h  FrictionConeConstraint.h  LeggedSelfCollisionConstraint.h  NormalVelocityConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
g1_interface/include/g1_interface/cost/: g1QuadraticTrackingCost.h
g1_interface/include/g1_interface/dynamics/: g1DynamicsAD.h
g1_interface/include/g1_interface/foot_planner/: CubicSpline.h  SplineCpg.h  SwingTrajectoryPlanner.h
g1_interface/include/g1_interface/gait/: Gait.h  GaitSchedule.h  LegLogic.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
g1_interface/include/g1_interface/initialization/: g1Initializer.h
g1_interface/include/g1_interface/reference_manager/: SwitchedModelReferenceManager.h
g1_interface/src/: g1Interface.cpp  g1PreComputation.cpp
g1_interface/src/common/: ModelSettings.cpp
g1_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FootRollContraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
g1_interface/src/dynamics/: g1DynamicsAD.cpp
g1_interface/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
g1_interface/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
g1_interface/src/initialization/: g1Initializer.cpp
g1_interface/src/reference_manager/: SwitchedModelReferenceManager.cpp
g1_interface/test/: AnymalFactoryFunctions.cpp
g1_interface/test/constraint/: testEndEffectorLinearConstraint.cpp  testFrictionConeConstraint.cpp  testZeroForceConstraint.cpp
g1_interface/test/include/g1_interface/test/: AnymalFactoryFunctions.h
g1_legged_description/: CMakeLists.txt  package.xml
g1_legged_description/config/: joint_names_g1_legged.yaml
g1_legged_description/launch/: visualize.launch.py
g1_legged_description/mjcf/: g1_23dof_rev_1_0.xml  g1_legged_control_.xml  humanoid_legged_control_.xml
g1_legged_description/rviz/: g1_legged_control.rviz  humanoid_legged_control.rviz
g1_legged_description/urdf/: g1_12dof.urdf  g1_legged_control_.urdf  g1_legged_origin.urdf
g1_mujoco_sim/: package.xml  setup.py
g1_mujoco_sim/g1_mujoco_sim/: g1_sim.py  joy.py  mujoco_base.py  teleop.py
g1_wbc/: CMakeLists.txt  package.xml
g1_wbc/include/g1_wbc/: HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
g1_wbc/src/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
g1_wbc/test/: HoQp_test.cpp
qpoases_catkin/: CMakeLists.txt  package.xml
