<?xml version="1.0"?>
<package format="2">
    <name>g1_wbc</name>
    <version>0.0.0</version>
    <description>Whole body control</description>
    <maintainer email="contact@bridgedp.com">bridgedp</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <!--depend>roscpp</depend -->
    <depend>g1_interface</depend>
    <depend>qpoases_catkin</depend>
    <depend>pinocchio</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>


</package>
